--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,10 @@
             <footer><small>
                 <hr>
                 <a href="https://twitter.com/happinesspacket" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @happinesspacket</a>
+                &nbsp;
+                <a href="https://twitter.com/fedora" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @fedora</a>
+                &nbsp;
+                <a href="https://twitter.com/intent/tweet?button_hashtag=FedoraAppreciationWeek2k18" class="twitter-hashtag-button" data-size="large" data-dnt="true">Tweet #FedoraAppreciationWeek2k18</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 <br>
                 Open-Source Happiness Packets is an
