--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,12 @@
                 <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">FAQ</a></li>
                 {% url 'messaging:archive' as url %}
                 <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">Happiness Archive</a></li>
+                {% if user.is_authenticated %}
+                 <a>{{ user.email }}</p>
+                {% else %}
+                {% url 'oidc_authentication_init' as url %}
+                <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">Login</a></li>
+                {% endif %}
             </ul>
         </div>
     </aside>
