--- a/templates/base.html
+++ b/templates/base.html
@@ -35,10 +35,20 @@
                 {% url 'messaging:archive' as url %}
                 <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">Happiness Archive</a></li>
                 {% if user.is_authenticated %}
-                 <a>{{ user.email }}</a>
+                <form id="logout" action="{% url 'oidc_logout' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-link btn-logout">
+                    <span class="glyphicon glyphicon-log-out"></span>
+                    <span class="nounderline">&nbsp;Logout</span>
+                    </button>
+                </form>
                 {% else %}
-                {% url 'oidc_authentication_init' as url %}
-                <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">Login</a></li>
+                <form id="login" action="{% url 'oidc_authentication_init' %}" method="get">
+                    <button type="submit" class="btn btn-link btn-login">
+                    <span class="glyphicon glyphicon-log-in"></span>
+                    <span class="nounderline">&nbsp;Login</span>
+                    </button>
+                </form>
                 {% endif %}
             </ul>
         </div>
