--- a/templates/base.html
+++ b/templates/base.html
@@ -76,13 +76,9 @@
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 <br>
                 Open-Source Happiness Packets is an
-                <a href="https://github.com/mxsasha/happinesspackets/">open-source project</a> by
-                <a href="https://twitter.com/mxsash">Sasha Romijn</a> and
-                <a href="https://twitter.com/thatdocslady">Mikey Ariel</a>.
+                <a href="https://github.com/mxsasha/happinesspackets/">open-source project</a>
                 <br>
-                Design and artwork by <a href="https://twitter.com/olasitarska">Ola Sitarska</a>.
-                <br>
-                Need help? <a href="mailto:info@happinesspackets.io">info@happinesspackets.io</a>
+                Need help? <a href="mailto:fedora.happinesspackets@gmail.com">fedora.happinesspackets@gmail.com</a>
                 <img class="emoji" src="{% static 'images/emoji/loveletter.png' %}" alt="💌" title="Love letter" aria-label="Emoji: Love letter" style="vertical-align: text-bottom">
 
             </small></footer>
