--- a/templates/base_email.html
+++ b/templates/base_email.html
@@ -18,12 +18,9 @@
             <hr>
             <p>
                 Open-source happiness packets is an
-                <a href="https://github.com/erikr/happinesspackets/" style="color: #F64747;">open-source project</a> by
-                <a href="https://twitter.com/mxsash" style="color: #F64747;">Sasha Romijn</a> and
-                <a href="https://twitter.com/thatdocslady" style="color: #F64747;">Mikey Ariel</a>.
-                Design and artwork by <a href="https://twitter.com/olasitarska" style="color: #F64747;">Ola Sitarska</a>.
+                <a href="https://github.com/erikr/happinesspackets/" style="color: #F64747;">open-source project</a>
                 <br>
-                Need help? <a href="mailto:info@happinesspackets.io" style="color: #F64747;">info@happinesspackets.io</a>
+                Need help? <a href="mailto:fedora.happinesspackets@gmail.com" style="color: #F64747;">fedora.happinesspackets@gmail.com</a>
             </p>
             <p>
                 Never want to receive email from us again?<br>
