--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <link href="{% static 'css/datepicker.css' %}" rel="stylesheet">
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <link href="{% static 'images/favicon.ico' %}" rel="icon" type="image/x-icon">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <!--[if lt IE 8]>
         <link href="{% static 'css/bootstrap-ie7.css' %}" rel="stylesheet">
@@ -20,6 +21,7 @@
 </head>
 
 <body>
+    {% include "facebook.html" %}
     <aside>
         <div class="sidebar">
             {% url 'messaging:start' as url %}
@@ -69,6 +71,10 @@
             </div>
             <footer><small>
                 <hr>
+                <a class="g-interactivepost sharebutton google" data-contenturl="https://happinesspackets.fedorainfracloud.org/" data-clientid="427442962349-biuc5ks65luss5h3v5oqtj15jigaqoib.apps.googleusercontent.com" data-cookiepolicy="single_host_origin" data-prefilltext="#FedoraAppreciationWeek2k18" data-calltoactionurl="http://plus.google.com/pages/create"><i class="fab fa-google-plus-g fa-lg"></i> Share #FedoraAppreciationWeek2k18</a>
+                <script type="text/javascript">(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = 'https://apis.google.com/js/client:plusone.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
+                <a id="fb" class="sharebutton"><i class="fab fa-facebook fa-lg"></i> Share #FedoraAppreciationWeek2k18</a>
+                <script>document.getElementById('fb').onclick = function() {FB.ui({method: 'share', mobile_iframe: true, hashtag: '#FedoraAppreciationWeek2k18', href: 'https://happinesspackets.fedorainfracloud.org/',}, function(response){});}</script>
                 <a href="https://twitter.com/intent/tweet?button_hashtag=FedoraAppreciationWeek2k18" class="twitter-hashtag-button" data-size="large" data-dnt="true">Tweet #FedoraAppreciationWeek2k18</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 <br>
