--- a/templates/messaging/message_sender_confirmation_sent.html
+++ b/templates/messaging/message_sender_confirmation_sent.html
@@ -9,11 +9,11 @@
     <p>
         We sent you a confirmation link to your email address. Follow the link to finalize sending your message.
     </p>
-    <a class="g-interactivepost sharebutton google" data-contenturl="https://happinesspackets.fedorainfracloud.org/" data-clientid="427442962349-biuc5ks65luss5h3v5oqtj15jigaqoib.apps.googleusercontent.com" data-cookiepolicy="single_host_origin" data-prefilltext="I just sent a happiness packet to thank a @fedora community member #FedoraAppreciationWeek2k18" data-calltoactionurl="http://plus.google.com/pages/create"><i class="fab fa-google-plus-g fa-lg"></i> Share #FedoraAppreciationWeek2k18</a>
+    <a class="g-interactivepost sharebutton google" data-contenturl="https://happinesspackets.fedorainfracloud.org/" data-clientid="427442962349-biuc5ks65luss5h3v5oqtj15jigaqoib.apps.googleusercontent.com" data-cookiepolicy="single_host_origin" data-prefilltext="I just sent a happiness packet to thank a @fedora community member #WeAreFedora" data-calltoactionurl="http://plus.google.com/pages/create"><i class="fab fa-google-plus-g fa-lg"></i> Share #WeAreFedora</a>
     <script type="text/javascript">(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = 'https://apis.google.com/js/client:plusone.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
-    <a id="fb" class="sharebutton"><i class="fab fa-facebook fa-lg"></i> Share #FedoraAppreciationWeek2k18</a>
-    <script>document.getElementById('fb').onclick = function() {FB.ui({method: 'share', mobile_iframe: true, hashtag: '#FedoraAppreciationWeek2k18', href: 'https://happinesspackets.fedorainfracloud.org/',}, function(response){});}</script>
-    <a href="https://twitter.com/intent/tweet?button_hashtag=FedoraAppreciationWeek2k18&text=I%20just%20sent%20a%20happiness%20packet%20to%20thank%20a%20@fedora%20community%20member" class="twitter-hashtag-button" data-size="large" data-dnt="true">Tweet #FedoraAppreciationWeek2k18</a>
+    <a id="fb" class="sharebutton"><i class="fab fa-facebook fa-lg"></i> Share #WeAreFedora</a>
+    <script>document.getElementById('fb').onclick = function() {FB.ui({method: 'share', mobile_iframe: true, hashtag: '#WeAreFedora', href: 'https://happinesspackets.fedorainfracloud.org/',}, function(response){});}</script>
+    <a href="https://twitter.com/intent/tweet?button_hashtag=WeAreFedora&text=I%20just%20sent%20a%20happiness%20packet%20to%20thank%20a%20@fedora%20community%20member" class="twitter-hashtag-button" data-size="large" data-dnt="true">Tweet #WeAreFedora</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     {% block footer %}{% endblock %}
 
