--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,8 @@
                 Need help? <a href="mailto:fedora.happinesspackets@gmail.com">fedora.happinesspackets@gmail.com</a>
                 <img class="emoji" src="{% static 'images/emoji/loveletter.png' %}" alt="💌" title="Love letter" aria-label="Emoji: Love letter" style="vertical-align: text-bottom">
                 <br>
+                Got feedback? File an issue <a href="https://pagure.io/fedora-commops/fedora-happiness-packets/new_issue">here</a>
+                <br>
                 <a href="https://www.facebook.com/TheFedoraProject"><i class="fab fa-facebook-f fa-lg"></i></a>
                 &nbsp;
                 <a href="https://twitter.com/fedora"><i class="fab fa-twitter fa-lg"></i></a>
