--- a/templates/base_email.html
+++ b/templates/base_email.html
@@ -5,10 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic|Roboto:400,300,300italic,400italic,700,700italic&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 </head>
 
-<body style="background-color: #F23030;font-family: 'Roboto', sans-serif;font-size: 16px;line-height: 1.8em;">
+<body style="background-color: #F23030;font-family: 'Open Sans', sans-serif;font-size: 16px;line-height: 1.8em;">
     <div style="text-align: center;padding: 20px;">
         <img src="cid:logo.png@happinesspackets.io" alt="Open-source Happiness Packets" style="max-width: 400px; padding: 30px">
     </div>
