Update background colors

--- a/templates/messaging/sender_confirmation_mail.html
+++ b/templates/messaging/sender_confirmation_mail.html
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-    Your message reads: 
+    Your message reads:
 </p>
 
 <p><em>{{ message.message|linebreaksbr }}</em></p>
@@ -19,7 +19,7 @@
 </p>
 
 <p>
-    <a href="{{ protocol }}://{{ domain }}{% url 'messaging:sender_confirm' identifier=message.identifier token=message.sender_email_token %}" role="button" style="display: inline-block; background: #F64747;color: white;text-transform: uppercase;padding: 0.9em 1.3em;text-decoration: none;border-radius: 6px">Yes! Please send my happiness packet</a>
+    <a href="{{ protocol }}://{{ domain }}{% url 'messaging:sender_confirm' identifier=message.identifier token=message.sender_email_token %}" role="button" style="display: inline-block; background: #3c6eb4;color: white;text-transform: uppercase;padding: 0.9em 1.3em;text-decoration: none;border-radius: 6px">Yes! Please send my happiness packet</a>
 </p>
 
 <p>
