--- a/templates/base_email.html
+++ b/templates/base_email.html
@@ -17,13 +17,13 @@
             <hr>
             <p>
                 Open-source happiness packets is an
-                <a href="https://github.com/erikr/happinesspackets/" style="color: #F64747;">open-source project</a>
+                <a href="https://github.com/erikr/happinesspackets/" style="color: #3c6eb4;">open-source project</a>
                 <br>
-                Need help? <a href="mailto:fedora.happinesspackets@gmail.com" style="color: #F64747;">fedora.happinesspackets@gmail.com</a>
+                Need help? <a href="mailto:fedora.happinesspackets@gmail.com" style="color: #3c6eb4;">fedora.happinesspackets@gmail.com</a>
             </p>
             <p>
                 Never want to receive email from us again?<br>
-                <a href="{{ protocol }}://{{ domain }}{{ blacklist_url }}"  style="color: #F64747;">Block {{ recipient }}</a>
+                <a href="{{ protocol }}://{{ domain }}{{ blacklist_url }}"  style="color: #3c6eb4;">Block {{ recipient }}</a>
             </p>
         </small></footer>
     </div>
