--- a/templates/messaging/recipient_mail.html
+++ b/templates/messaging/recipient_mail.html
@@ -11,7 +11,7 @@
 
 <p>
     If this is the first time you've heard about Happiness Packets, check out
-    <a href="{{ protocol }}://{{ domain }}/" style="color: #F64747;">our website</a>.
+    <a href="{{ protocol }}://{{ domain }}/" style="color: #3c6eb4;">our website</a>.
     In short, Happiness Packets are positivity messages that open-source contributors can send to each other
     anonymously and confidentially. By sending Happiness Packets, we hope to create an atmosphere where
     positive feedback is amplified and accepted more than negative feedback.
@@ -23,12 +23,12 @@
 
 <p>
     If you and the sender of the Happiness Packet both agree, we'd love to publish the message to our
-    <a href="{{ protocol }}://{{ domain }}{% url 'messaging:archive' %}" style="color: #F64747;">Happiness Archive</a>
+    <a href="{{ protocol }}://{{ domain }}{% url 'messaging:archive' %}" style="color: #3c6eb4;">Happiness Archive</a>
     to inspire others from the community.
 </p>
 
 <p>
-    <a href="{{ protocol }}://{{ domain }}{% url 'messaging:recipient_message_update' identifier=message.identifier token=message.recipient_email_token %}" role="button" style="display: inline-block; background: #F64747;color: white;text-transform: uppercase;padding: 0.9em 1.3em;text-decoration: none;border-radius: 6px">Set publishing permissions</a>
+    <a href="{{ protocol }}://{{ domain }}{% url 'messaging:recipient_message_update' identifier=message.identifier token=message.recipient_email_token %}" role="button" style="display: inline-block; background: #3c6eb4;color: white;text-transform: uppercase;padding: 0.9em 1.3em;text-decoration: none;border-radius: 6px">Set publishing permissions</a>
 </p>
 
 <p>This is entirely optional, we respect your privacy and only publish messages if both the sender and recipient agree.</p>
