Update names to Fedora Happiness Packets

--- a/templates/messaging/start.html
+++ b/templates/messaging/start.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="page-header">
-        <h2>What are Open-Source Happiness Packets?</h2>
+        <h2>What are Fedora Happiness Packets?</h2>
     </div>
 
     <p class="lead">
@@ -15,7 +15,7 @@
 
     <p>
         The feeling that you made a difference, that your work matters and has value, and that the people
-        you work with are happy to work with you, is an awesome feeling. With Open-Source Happiness Packets, we're
+        you work with are happy to work with you, is an awesome feeling. With Fedora Happiness Packets, we're
         trying to spread that feeling.
     </p>
 
@@ -30,7 +30,7 @@
         about such feelings, and naturally feel uncomfortable or even creepy to share them.
     </p>
     <p>
-        Open-Source Happiness Packets is a very simple platform to anonymously reach out to the people that you
+        Fedora Happiness Packets is a very simple platform to anonymously reach out to the people that you
         appreciate or to whom you are thankful in your open-source community. Your message can be sent anonymously
         if you feel uncomfortable to share your name with the recipient. Of course, we encourage you to share your name,
         but it's completely optional!
