Change background color of email

--- a/templates/base_email.html
+++ b/templates/base_email.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body style="background-color: #F23030;font-family: 'Open Sans', sans-serif;font-size: 16px;line-height: 1.8em;">
+<body style="background-color: #3c6eb4;font-family: 'Open Sans', sans-serif;font-size: 16px;line-height: 1.8em;">
     <div style="text-align: center;padding: 20px;">
         <img src="cid:logo.png@happinesspackets.io" alt="Open-source Happiness Packets" style="max-width: 400px; padding: 30px">
     </div>
