-Modified footer by centering text -Made share buttons smaller
Signed-off-by: Alexandru Marginean <alexmarginean16@gmail.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
                     {% block content %}{% endblock %}
                 </div>
             </div>
-            <footer><small>
+            <footer class="text-center"><small>
                 <hr>
                 {% block footer %}
                 {% include "follow.html" %}
