--- a/templates/follow.html
+++ b/templates/follow.html
@@ -1,6 +1,22 @@
+<style type="text/css">
+	.sharebutton {
+		font-size: 0.6em;
+		width: 100px;
+		padding: 0;
+	}
+
+	.twitter {
+		background-color: #00aced;
+	}
+
+	.twitter:hover {
+		background-color: #0084b4;
+	}
+</style>
+
 <a class="g-interactivepost sharebutton google" data-contenturl="https://happinesspackets.fedorainfracloud.org/" data-clientid="427442962349-biuc5ks65luss5h3v5oqtj15jigaqoib.apps.googleusercontent.com" data-cookiepolicy="single_host_origin" data-prefilltext="#WeAreFedora" data-calltoactionurl="http://plus.google.com/pages/create"><i class="fab fa-google-plus-g fa-lg"></i> Share #WeAreFedora</a>
 <script type="text/javascript">(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = 'https://apis.google.com/js/client:plusone.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
 <a id="fb" class="sharebutton"><i class="fab fa-facebook fa-lg"></i> Share #WeAreFedora</a>
 <script>document.getElementById('fb').onclick = function() {FB.ui({method: 'share', mobile_iframe: true, hashtag: '#WeAreFedora', href: 'https://happinesspackets.fedorainfracloud.org/',}, function(response){});}</script>
-<a href="https://twitter.com/intent/tweet?button_hashtag=WeAreFedora" class="twitter-hashtag-button" data-size="large" data-dnt="true">Tweet #WeAreFedora</a>
+<a href="https://twitter.com/intent/tweet?button_hashtag=WeAreFedora" class="sharebutton twitter" data-size="large" data-dnt="true"><i class="fab fa-twitter fa-lg"></i>Tweet #WeAreFedora</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
