Added packets sent counter to sidebar

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
                 </form>
                 {% endif %}
             </ul>
+            <p>Packets sent: <b>{{ packets_sent }}</b></p>
         </div>
     </aside>
     <main>
