add custom CSS for responsive 'send' buttons, and add respective btn-responsive class to the start.html send buttons

--- a/templates/messaging/start.html
+++ b/templates/messaging/start.html
@@ -20,7 +20,7 @@
     </p>
 
     <p class="text-center">
-        <a class="btn btn-primary btn-lg" href="{% url 'messaging:send' %}" role="button">Send some happiness now! <img class="emoji" src="static/images/emoji/loveletter.png" alt="💌" title="Love letter" aria-label="Emoji: Love letter"></a>
+        <a class="btn btn-primary btn-lg btn-responsive" href="{% url 'messaging:send' %}" role="button">Send some happiness now! <img class="emoji" src="static/images/emoji/loveletter.png" alt="💌" title="Love letter" aria-label="Emoji: Love letter"></a>
     </p>
 
     <h2>How does it work?</h2>
@@ -48,7 +48,7 @@
     {% include 'messaging/_message_list.html' %}
 
     <p class="text-center">
-        <a class="btn btn-primary btn-lg" href="{% url 'messaging:send' %}" role="button">Send some happiness now! <img class="emoji" src="static/images/emoji/loveletter.png" alt="💌" title="Love letter" aria-label="Emoji: Love letter"></a>
+        <a class="btn btn-primary btn-lg btn-responsive" href="{% url 'messaging:send' %}" role="button">Send some happiness now! <img class="emoji" src="static/images/emoji/loveletter.png" alt="💌" title="Love letter" aria-label="Emoji: Love letter"></a>
     </p>
 
 {% endblock content %}
