--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -200,3 +200,9 @@ blockquote {
 .google:hover{
     background-color: #b72213;
 }
+
+@media (max-width: 360px) {
+    .btn-responsive {
+        font-size: 15px;
+    }
+}
