Changed styling to be consistent with the rest of the sidebar, added tests, and added read messages to the counter.

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
             {% url 'messaging:start' as url %}
             <a href="{{ url }}"><img src="{% static 'images/logo.png' %}" alt="Open-Source Happiness Packets" class="logo"/></a>
             <ul class="nav nav-stacked">
+                <li><a>Packets sent: <b>{{ packets_sent }}</b></a></li>
                 {% url 'messaging:send' as url %}
                 <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">Send some happiness!</a></li>
                 {% url 'messaging:start' as url %}
@@ -53,7 +54,6 @@
                 </form>
                 {% endif %}
             </ul>
-            <p>Packets sent: <b>{{ packets_sent }}</b></p>
         </div>
     </aside>
     <main>
