Remove style tagto stop rendering in browser

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -182,7 +182,7 @@ blockquote {
     display: inline-block;
     vertical-align: top;
     font: normal normal normal 11px/18px 'Helvetica Neue',Arial,sans-serif;
-    font-size: 13px;
+    font-size: 0.6em;
     line-height: 26px;
     border-radius: 4px;
 }
@@ -205,4 +205,12 @@ blockquote {
     .btn-responsive {
         font-size: 15px;
     }
+}
+
+.twitter {
+    background-color: #00aced;
+}
+
+.twitter:hover {
+    background-color: #0084b4;
 }
