--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -114,6 +114,8 @@ blockquote {
         width: 25%;
         height: calc(100% + 20px);
         position: fixed;
+        display: flex;
+        justify-content: center;
         background: -moz-linear-gradient(top,  #3c6eb4 0%, #3c6eb4 27%, #3c6eb4 27%, #3c6eb4 100%);
         background: -webkit-linear-gradient(top,  #3c6eb4 0%, #3c6eb4 27%, #3c6eb4 27%, #3c6eb4 100%);
         background: linear-gradient(to bottom,  #3c6eb4 0%, #3c6eb4 27%, #3c6eb4 27%, #3c6eb4 100%);
