logo responsive for mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -216,3 +216,8 @@ blockquote {
 .twitter:hover {
     background-color: #0084b4;
 }
+@media (max-width: 450px) {
+    aside .sidebar .logo {
+        width: 100%;
+    }
+}
