--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
                     {% block content %}{% endblock %}
                 </div>
             </div>
-            <footer class="text-center"><small>
+            <footer class="text-center col-md-10"><small>
                 <hr>
                 {% block footer %}
                 {% include "follow.html" %}
