Integrate fedora-messaging
This commit includes:

1. Adds fedora-messaging and happinesspacket-schema as a dependency in `base.py`
2. Sets env variable to fedora-messaging config file in `Dockerfile`
3. Adds `config.toml` [configuration file for fedora-messaging] to project's
app directory
4. Instructions to build a container for RabbitMQ in `docker-compose.yml`
5. Adds `happinesspacket_schema_package` which houses the schema and tests.
6. Configured MessageSenderConfirmationView to post messages to the broker.

--- a/templates/messaging/message_sender_confirmation_failed.html
+++ b/templates/messaging/message_sender_confirmation_failed.html
@@ -14,6 +14,14 @@
         <div class="alert alert-info">
             You already confirmed this message.
         </div>
+    {% elif publish_returned %}
+        <div class="alert alert-info">
+            The message could not be sent because the broker rejected the message. Please try again later!
+        </div>
+    {% elif connection_exception %}
+        <div class="alert alert-info">
+            The message could not be sent because an error in connection occurred before the broker could send a publish confirmation. Please try again later. 
+        </div>
     {% endif %}
 
 {% endblock content %}
