--- a/templates/messaging/_message_list.html
+++ b/templates/messaging/_message_list.html
@@ -10,24 +10,5 @@
   {{ message.message|linebreaksbr }}
 </blockquote>
 {% endfor %} {% block pagination %} {% if is_paginated %}
-<div class="pagination">
-  {% if page_obj.has_previous %}
-  <li class="page-item">
-    <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
-            <span aria-hidden="true">&laquo;</span>
-            <span class="sr-only">Previous</span>
-          </a>
-  </li>
-  {% endif %} {% for i in paginator.page_range %}
-  <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-  {% endfor %} {% if page_obj.has_next %}
-  <li class="page-item">
-    <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-  </li>
-  {% endif %}
-</div>
-
+{% include 'messaging/_pagination.html' %}
 {% endif %} {% endblock %}
