improvements on the titles to be displayed in the address bar

--- a/templates/messaging/message_send_form.html
+++ b/templates/messaging/message_send_form.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+
+{% block extra_head %}<title>Send happiness packet</title>{% endblock %}
+
 {% load crispy_forms_tags %}
 
 {% block content %}
