--- a/templates/messaging/sent_messages.html
+++ b/templates/messaging/sent_messages.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block extra_head %}<title>Sent Happiness Packets</title>{% endblock %}
 {% block content %}
 
     <div class="page-header">
