--- a/templates/messaging/archive.html
+++ b/templates/messaging/archive.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block extra_head %}<title>Happiness Archive</title>{% endblock %}
+
 {% block content %}
 
     <div class="page-header">
