--- a/templates/messaging/blacklist_email.html
+++ b/templates/messaging/blacklist_email.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block extra_head %}<title>Block e-mail address</title>{% endblock %}
+
 {% block content %}
 
     <div class="page-header">
