--- a/templates/messaging/message_sender_confirmation_sent.html
+++ b/templates/messaging/message_sender_confirmation_sent.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block extra_head %}<title>Check your email</title>{% endblock %}
+
 {% block content %}
 
     <div class="page-header">
