--- a/templates/messaging/start.html
+++ b/templates/messaging/start.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block extra_head %}<title>Fedora Happiness Packets</title>{% endblock %}
+
 {% block content %}
 
     <div class="page-header">
