--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+{% block extra_head %}<title>Search</title>{% endblock %}
+
+
 {% block content %}
 <h2>Search</h2>
 <form method="get"  class="form-inline">
