--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,15 +3,39 @@
     --secondary-color: #294172;
 }
 
+*{
+    box-sizing: border-box;
+}
+
+*:before, *:after{
+    box-sizing: border-box;
+}
+
+html{
+    height: 100%;
+}
+
 body {
     font-family: 'Open Sans';
     line-height: 1.8em;
     font-size: 16px;
+    height: 100%;
+    position: relative;
+    margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat';
     margin-top: 1.4em;
+}
+
+main{
+    min-height: 100vh;
+    display: block;
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 300px;
+    width: 100%;
 }
 
 a, a:hover {
@@ -66,7 +90,9 @@ footer {
     text-align: center;
     padding:0 7vw;
     background-color: #3c6eb421;
-    position: relative;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 fieldset {
@@ -178,12 +204,12 @@ blockquote {
     }
 
     main {
-        margin-left: 25%;
+        margin-left: 350px;
+        width: 75%;
     }
 
     main .container {
         padding: 0px 50px;
-        width: 100%;
     }
 
     blockquote {
@@ -209,6 +235,11 @@ blockquote {
 @media (min-width: 1530px) {
     blockquote {
         min-height: 170px;
+    }
+
+    main{
+        margin-left: 450px;
+        width: 75%;
     }
 }
 
