--- a/templates/messaging/message_sender_confirmation_sent.html
+++ b/templates/messaging/message_sender_confirmation_sent.html
@@ -15,6 +15,9 @@
     <script>document.getElementById('fb').onclick = function() {FB.ui({method: 'share', mobile_iframe: true, hashtag: '#WeAreFedora', href: 'https://happinesspackets.fedorainfracloud.org/',}, function(response){});}</script>
     <a href="https://twitter.com/intent/tweet?button_hashtag=WeAreFedora&text=I%20just%20sent%20a%20happiness%20packet%20to%20thank%20a%20@fedora%20community%20member" class="twitter-hashtag-button" data-size="large" data-dnt="true">Tweet #WeAreFedora</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    {% block footer %}{% endblock %}
 
 {% endblock content %}
+
+{% block footer %}
+    {% include "follow.html" %}
+{% endblock %}
